RESOLVED FIXED30689
caretRangeFromPoint() and elementFromPoint() returns wrong result in zoomed and scrolled page.
https://bugs.webkit.org/show_bug.cgi?id=30689
Summary caretRangeFromPoint() and elementFromPoint() returns wrong result in zoomed a...
Xiaomei Ji
Reported 2009-10-22 13:47:24 PDT
Created attachment 41682 [details] test case Steps: 1. Open the attached HTML 2. click mouse somewhere to show the offset of mouse within the element 3. zoom the page *and* resize the window to make the page scroll 4. scroll the page horizontally and/or vertically, 5. click mouse in the same place as step 2., observe the printed offset. Results: the printd offset is different when page is zoomed and scrolled. Expected: the printed offset should be the same. Cause: The real cause is the wrong calculation of event.clientX/Y when page is zoomed and scrolled. After Sam fixed the event.clientX/Y in r49551, patch in r49490 ( for issue 30034) should be reverted.
Attachments
test case (3.81 KB, text/html)
2009-10-22 13:47 PDT, Xiaomei Ji
no flags
patch w/ layout test (11.68 KB, patch)
2009-10-22 13:50 PDT, Xiaomei Ji
no flags
Xiaomei Ji
Comment 1 2009-10-22 13:50:24 PDT
Created attachment 41684 [details] patch w/ layout test
WebKit Commit Bot
Comment 2 2009-10-22 21:32:23 PDT
Comment on attachment 41684 [details] patch w/ layout test Rejecting patch 41684 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11485 test cases. fast/media/mq-transform-02.html -> failed Exiting early after 1 failures. 7442 tests run. 136.02s total testing time 7441 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 3 test cases (<1%) had stderr output
Eric Seidel (no email)
Comment 3 2009-10-23 12:05:11 PDT
Comment on attachment 41684 [details] patch w/ layout test Sorry about the commit-queue trouble. Should work fine now.
Xiaomei Ji
Comment 4 2009-10-23 12:30:36 PDT
(In reply to comment #3) > (From update of attachment 41684 [details]) > Sorry about the commit-queue trouble. Should work fine now. NP. Instead, I should thank you for taking care of this, as always!
WebKit Commit Bot
Comment 5 2009-10-23 12:48:16 PDT
Comment on attachment 41684 [details] patch w/ layout test Clearing flags on attachment: 41684 Committed r49990: <http://trac.webkit.org/changeset/49990>
WebKit Commit Bot
Comment 6 2009-10-23 12:48:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.